Fixed text overflow for project name in project settings

--- a/Frontend/src/app/dialogs/project-settings/project-settings-dialog.component.css
+++ b/Frontend/src/app/dialogs/project-settings/project-settings-dialog.component.css
@@ -23,5 +23,13 @@
 #projectNameHeader {
   margin: 0 3.5rem;
   overflow: hidden;
+}
+
+#projectNameHeader h1 {
+  display: block;
   white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 100%;
+  text-align: center;
 }
